--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="profile">
-        <h1>User Profile</h1>
-        <p id="username"></p>
-        <p id="userrole"></p>
-        <p id="yearsOfEmployment"></p>
-        <button onclick="updateUserRole()">Promote to Superadmin</button>
-        <button onclick="incrementYearsOfEmployment()">Add 1 Year of Employment</button>
+    <div class="container">
+        <div class="profile-card">
+            <h1>User Profile</h1>
+            <p id="username"></p>
+            <p id="userrole"></p>
+            <p id="yearsOfEmployment"></p>
+            <button onclick="updateUserRole()">Promote to Superadmin</button>
+            <button onclick="incrementYearsOfEmployment()">Add 1 Year of Employment</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
