Now with children

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <p id="username"></p>
             <p id="userrole"></p>
             <p id="yearsOfEmployment"></p>
+            <p id="children"></p>
             <button onclick="updateUserRole()">Promote to Superadmin</button>
             <button onclick="incrementYearsOfEmployment()">Add 1 Year of Employment</button>
         </div>
